--- a/k8s/manifests/weather-forecast/bff/database/services/headless-service.yaml
+++ b/k8s/manifests/weather-forecast/bff/database/services/headless-service.yaml
@@ -11,14 +11,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
+  name: weather-forecast-bff-redis
   namespace: backend
   labels:
-    app: redis
+    app: weather-forecast-bff-redis
     version: v1
 spec:
   selector:
-    app: redis
+    app: weather-forecast-bff-redis
     version: v1
   ports:
   - port: 6379
