--- a/k8s/manifests/weather-forecast/bff/database/services/write-service.yaml
+++ b/k8s/manifests/weather-forecast/bff/database/services/write-service.yaml
@@ -2,16 +2,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-primary
+  name: weather-forecast-bff-redis-primary
   namespace: backend
   labels:
-    app: redis
+    app: weather-forecast-bff-redis
     version: v1
 spec:
   ports:
   - name: redis
     port: 6379
   selector:
-    # writes are directed to redis-0 pod
-    statefulset.kubernetes.io/pod-name: dev-redis-0
+    # writes are directed to weather-forecast-bff-redis-0 pod
+    statefulset.kubernetes.io/pod-name: dev-weather-forecast-bff-redis-0
   type: ClusterIP
