--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ../../manifests/weather-forecast/bff
   - ../../manifests/weather-forecast/frontend
   - ../../manifests/shared
-  - ../../manifests/weather-forecast/database
+  - ../../manifests/weather-forecast/bff/database
   - weather-forecast-bff_config-map.yaml
 
 
@@ -24,11 +24,11 @@ commonLabels:
 # config map generators are used here in order to update the pods as the config changes
 # this will created a config which is suffixed by the hash of the config content. Something like 
 configMapGenerator:
-  - name: redisconfigenvvars
+  - name: rediswfconfigenvvars
     namespace: backend
     literals:
       # used by redis in order to configure the replication mecanism
-      - REDIS_HEADLESS_SERVICE=dev-redis
+      - REDIS_HEADLESS_SERVICE=dev-weather-forecast-bff-redis
     # this is necessary in order to avoid non conventional resource name with naming RFCs
     options:
       disableNameSuffixHash: true
