--- a/k8s/manifests/weather-forecast/bff/deployment.yaml
+++ b/k8s/manifests/weather-forecast/bff/deployment.yaml
@@ -59,7 +59,7 @@ spec:
         command:
           - /app/wait-for.sh
         args:
-          - dev-redis-secondary.backend.svc.cluster.local
+          - dev-weather-forecast-bff-redis-secondary.backend.svc.cluster.local
           - "6379"
           - dotnet
           - WeatherForecast.Api.dll
