--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 # reference all manifests from base folder
 resources:
+  - ../../manifests/operations
   - ../../manifests/weather-forecast/bff
   - ../../manifests/weather-forecast/frontend
   - ../../manifests/shared
