fix: correct all main references to develop

--- a/k8s/gitops/addons/istio/podmonitors.yaml
+++ b/k8s/gitops/addons/istio/podmonitors.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     repoURL: https://github.com/WellArchitectedLabs/WellArchitectedLab.MonoRepo.git
     path: k8s/gitops/addons/istio/extras
-    targetRevision: main
+    targetRevision: develop
   destination:
     server: https://kubernetes.default.svc
     namespace: istio-system
