--- a/k8s/overlays/sandbox/kustomization.yaml
+++ b/k8s/overlays/sandbox/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ../../manifests/shared
   - ../../manifests/weather-forecast/database
   - weather-forecast-bff_config-map.yaml
-
+  - ../../manifests/tools/htg
 
 # define a sandbox prefix for all created environment in relation to this overlay
 namePrefix: sandbox-
