--- a/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
+++ b/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: grafana-dashboard-backup
+  namespace: monitoring
 spec:
   schedule: "0 2 * * *"
   jobTemplate:
