fix: use alpine since bin sh was not installed

--- a/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
+++ b/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
@@ -16,7 +16,7 @@ spec:
 
           initContainers:
           - name: grafana-backup
-            image: ghcr.io/jqlang/jq:1.7
+            image: alpine:3.19
             volumeMounts:
               - mountPath: /backups
                 name: backup-volume
