revert: do not use apk since it is not supposed in git image

--- a/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
+++ b/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
@@ -92,7 +92,8 @@ spec:
                 - |
                   set -euo pipefail
 
-                  apk add --no-cache curl
+                  # Sanity check
+                  test -f /backups/grafana-dashboards.json
 
                   # Install gh CLI
                   GH_VERSION=2.35.0
