fix: correctly set PAT token

--- a/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
+++ b/k8s/manifests/operations/grafana/grafana-dashboards-backup.yaml
@@ -10,7 +10,6 @@ spec:
       template:
         spec:
           restartPolicy: OnFailure
-
           volumes:
             - name: backup-volume
               emptyDir: {}
@@ -37,7 +36,6 @@ spec:
                 - -c
                 - |
                   set -euo pipefail
-
                   apk add --no-cache curl jq
 
                   echo "Fetching dashboard list"
@@ -92,8 +90,10 @@ spec:
                 - |
                   set -euo pipefail
 
+                  # Sanity check
                   test -f /backups/grafana-dashboards.json
 
+                  # Install GitHub CLI
                   GH_VERSION=2.35.0
                   curl -sSL https://github.com/cli/cli/releases/download/v${GH_VERSION}/gh_${GH_VERSION}_linux_amd64.tar.gz \
                     | tar -xz
@@ -102,7 +102,6 @@ spec:
                   echo "${GITHUB_PAT}" | gh auth login --with-token
 
                   cd /backups
-
                   if [ -d repo/.git ]; then
                     echo "Repo already exists, reusing it"
                     cd repo
@@ -115,6 +114,9 @@ spec:
 
                   git checkout -B ${SOURCE_BRANCH} origin/${TARGET_BRANCH} || git checkout -B ${SOURCE_BRANCH}
 
+                  # 🔑 Inject PAT into git remote for push
+                  git remote set-url origin https://x-access-token:${GITHUB_PAT}@github.com/${GIT_REPO}.git
+
                   cp /backups/grafana-dashboards.json grafana-dashboards.json
 
                   git config user.name "grafana-backup-bot"
@@ -123,7 +125,7 @@ spec:
                   git add grafana-dashboards.json
                   git commit -m "Automated Grafana dashboards backup" || exit 0
 
-                  git push -f https://${GITHUB_PAT}@github.com/${GIT_REPO}.git ${SOURCE_BRANCH}
+                  git push -f origin ${SOURCE_BRANCH}
 
                   gh pr create \
                     --repo ${GIT_REPO} \
@@ -133,4 +135,4 @@ spec:
                     --body "Automated Grafana dashboards backup" \
                   || gh pr edit ${SOURCE_BRANCH} \
                     --title "Automated Grafana dashboards backup" \
-                    --body "Automated Grafana dashboards backup"
+                    --body "Automated Grafana dashboards backup."
